# STC3115GenericDriver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/: stc3115_Battery.h  stc3115_Driver.c  stc3115_I2C.c  stc3115_I2C.h
